--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,10 +24,10 @@ dependencies:
   intl: ^0.18.1
   flutter_local_notifications: ^16.1.0
   provider: ^6.0.5
-  firebase_core: ^2.21.0
-  firebase_auth: ^4.12.1
-  firebase_storage: ^11.4.1
-  cloud_firestore: ^4.12.2
+  #firebase_core: ^2.21.0
+  #firebase_auth: ^4.12.1
+  #firebase_storage: ^11.4.1
+  #cloud_firestore: ^4.12.2
 
 dev_dependencies:
   flutter_test:
