--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   sqflite: ^2.3.0 
   path_provider: ^2.1.1 
   get: ^4.6.6
-  http: ^1.1.0
+  http: ^0.13.6
   intl: ^0.18.1
   flutter_local_notifications: ^16.1.0
   provider: ^6.0.5
@@ -28,6 +28,9 @@ dependencies:
   firebase_auth: ^4.12.1
   cloud_firestore: ^4.12.2
   google_sign_in: ^6.1.6
+  firebase_auth_web: ^5.8.8
+  flutter_facebook_auth: ^5.0.11
+  flutter_login_facebook: ^1.9.0
 
 dev_dependencies:
   flutter_test:
