--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   firebase_auth_web: ^5.8.8
   flutter_facebook_auth: ^5.0.11
   flutter_login_facebook: ^1.9.0
+  image_picker: ^1.0.4
+  firebase_storage: ^11.5.2
 
 dev_dependencies:
   flutter_test:
