--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -69,6 +69,7 @@ flutter {
 dependencies {
     implementation platform('com.google.firebase:firebase-bom:32.4.1')
     implementation 'androidx.multidex:multidex:2.0.1'
-     implementation 'com.facebook.android:facebook-login:latest.release'
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.facebook.android:facebook-login:latest.release'
 
 }
