--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_login_facebook: ^1.9.0
   image_picker: ^1.0.4
   firebase_storage: ^11.5.2
+  firebase_messaging: ^14.7.5
 
 dev_dependencies:
   flutter_test:
